k8s/namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperintel
  labels:
    name: paperintel
